sending messages upon enter key pressed works, fixed a display issue of long lines of text overflowing the message container

--- a/src/app/rxjs/rxjs.component.css
+++ b/src/app/rxjs/rxjs.component.css
@@ -87,6 +87,7 @@
 }
 .conversation-line-container{
     padding: 1rem;
+    word-break: break-all;
 }
 
    
